--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -14,11 +14,11 @@
 
   <body>
 
-    <header><h1>HTML lessons to learn from</h1></header>
+    <header><h1>Who Am I Project</h1></header>
 
-       <nav><h2>Navigation Menu</h2></nav>
+       <nav><h2>Hadi Osman</h2></nav>
 
-       <aside><p>The Aside Space</p></aside>
+    
 
        <section>
          <h3>Introduction</h3>
@@ -29,7 +29,10 @@
               I have been using computers since i was a little kid, so coding is something i would really like to learn.
               I have made websites on website building sites before, but i didnt do any coding, so this brings a challenge to me, and it is a skill i can use later in life.
               My family is originally from the country Lebanon, my dad moved to Toronto in the 1980's, and my mom followed him a few years after.
-            They moved to Lethbridge and lived there for almost 10 years, I was born a year before they left Lethbridge to come to Edmonton.</p>
+            They moved to Lethbridge and lived there for almost 10 years, I was born a year before they left Lethbridge to come to Edmonton. My family and I travel
+            to Lebanon every year with the exception of last summer, due to COVID-19. None of my extended family moved with us to Canada, so it has been hard on my family the past year.
+
+          </p>
 
          </article>
 
