--- a/Who Am I Inline CSS/childPages/Academics.html
+++ b/Who Am I Inline CSS/childPages/Academics.html
@@ -22,10 +22,12 @@
 
 
        <section>
-         <h3>Introduction</h3>
+         <h3>Academics</h3>
 
       <article>
-           <p>Hello, my name is Hadi Osman, and I am a student at Queen Elizabeth High School. Currently, i am in the computer sciences class, where we are learning how to program and code ttttttttttttttttttttttttttttttttttttttt</p>
+           <p>I think of myself as a sucessful student. I have finished almost every one of my classes after grade 7 with an 80% or above.
+             I didnt do nearly as much out of school work as well, so i believe if i put in the effort needed I can excel in any class.
+           Usually most classes come pretty easy to me </p>
          </article>
 
          <article>
