--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -18,7 +18,7 @@
 
        <nav><h2>Hadi Osman</h2></nav>
 
-    
+
 
        <section>
          <h3>Introduction</h3>
@@ -52,8 +52,8 @@
                Careers</a></li>
                <li><a href="childPages\Interests.html" target="_blank">
                Interests</li>
-             <li><a href="childPages\My Life.html" target="_blank">
-               My Life
+             <li><a href="childPages\Academics.html" target="_blank">
+               Academics
                </li>
 
            </ol>
