--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -16,7 +16,18 @@
 
     <header><h1>Who Am I Project</h1></header>
 
-       <nav><h2>Hadi Osman</h2></nav>
+       <nav><h2>Navigation Menu</h2></nav>
+       <aside><p>   <ol>
+            <li>If you would like to visit the Careers page, click<a href="childPages\Career.html" target="_blank">
+              here</a></li>
+            </li>if you would like to visit the interests page, click<a href="childPages\Interests.html" target="_blank">
+              here</a></li>
+            <li>if you would like to visit the academics page, click<a href="childPages\Academics.html" target="_blank">
+              here</a></li>
+
+          </ol>
+        </p>
+        </aside>
 
 
 
