--- a/Who Am I Inline CSS/childPages/Interests.html
+++ b/Who Am I Inline CSS/childPages/Interests.html
@@ -16,26 +16,26 @@
 
     <header><h1>Who Am I project </h1></header>
 
-       <nav><h2>Hadi Osman</h2></nav>
+       <nav><h2>Interests</h2></nav>
 
-       <aside><p></p></aside>
+
 
 
        <section>
-         <h3>Introduction</h3>
+
 
       <article>
-           <p>Hello, my name is Hadi Osman, and I am a student at Queen Elizabeth High School. Currently, i am in the computer sciences class, where we are learning how to program and code ttttttttttttttttttttttttttttttttttttttt</p>
+           <p></p>
          </article>
 
          <article>
-           <p>This is article 2 in section 1.</p>
+           <p></p>
          </article>
 
        </section>
 
        <section>
-         <h3>Section 2</h3>
+         <h3>Interests</h3>
 
          <article>
            <p>This is article 1 in section 2.</p>
@@ -58,7 +58,7 @@
        <em><a href="LINK HERE!!!!" target="_blank">
        - AUTHOR OF QUOTE!!!!</a></em>
      </p>
-     <p>&</p>
+     <p></p>
    </footer>
 
 </html>
