--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -17,15 +17,16 @@
     <header><h1>Who Am I Project</h1></header>
 
        <nav><h2>Navigation Menu</h2></nav>
-       <aside><p>   <ol>
+       <aside><p>
+         <ul style="list-style-type:square">
             <li>If you would like to visit the Careers page, click<a href="childPages\Career.html" target="_blank">
               here</a></li>
-            </li>if you would like to visit the interests page, click<a href="childPages\Interests.html" target="_blank">
+            <li>if you would like to visit the Interests page, click<a href="childPages\Interests.html" target="_blank">
               here</a></li>
-            <li>if you would like to visit the academics page, click<a href="childPages\Academics.html" target="_blank">
+            <li>if you would like to visit the Academics page, click<a href="childPages\Academics.html" target="_blank">
               here</a></li>
 
-          </ol>
+          </ul>
         </p>
         </aside>
 
@@ -53,19 +54,6 @@
 
        </section>
 
-       <section>
-         <h3>HTML Pages </h3>
-
-         <article>
-           <h4></h4>
-           <ol>
-             <li><a href="childPages\Career.html" target="_blank">
-               Careers</a></li>
-               <li><a href="childPages\Interests.html" target="_blank">
-               Interests</li>
-             <li><a href="childPages\Academics.html" target="_blank">
-               Academics
-               </li>
 
            </ol>
          </article>
