--- a/Who Am I Inline CSS/childPages/Career.html
+++ b/Who Am I Inline CSS/childPages/Career.html
@@ -2,30 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Who Am I</title>
+    <title>Career</title>
 
     <meta name="author" content="Hadi Osman">
    <meta name="description" content="Describing who I am">
    <meta name="keywords" content="description, biography, Hadi Osman">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+   <html>
+   <style>
+      div {
+     border: 5px outset royalblue;
+     background-color: aqua ;
+     text-align: center;
+   }
+   </style>
   </head>
 
   <body>
 
-    <header><h1>Who Am I project </h1></header>
+    <div><header><div><h1>Career</h1></div></header></div>
 
-       <nav><h2>Career</h2></nav>
+       <nav><h2>Who Am I</h2></nav>
 
 
 
 
        <section>
-    
+
 
       <article>
-           <p></p>
+           <p> I only just started thinking about what I would like to do after i finish high school. Right now,
+            I believe I've narrowed it down to dentistry, civil engineering, or something to do with computers,
+            like cyber security, or creating websites and programs. </p>
          </article>
 
          <article>
