--- a/Who Am I Inline CSS/childPages/Interests.html
+++ b/Who Am I Inline CSS/childPages/Interests.html
@@ -2,30 +2,36 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Who Am I</title>
+    <title>Interests</title>
 
     <meta name="author" content="Hadi Osman">
    <meta name="description" content="Describing who I am">
    <meta name="keywords" content="description, biography, Hadi Osman">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+   <html>
+   <style>
+      div {
+     border: 5px outset red;
+     background-color: crimson ;
+     text-align: center;
+   }
+   </style>
   </head>
 
   <body>
 
-    <header><h1>Who Am I project </h1></header>
+  <div><header><div><h1>Interests</h1></div></header></div>
 
-       <nav><h2>Interests</h2></nav>
-
-
-
+       <nav><h2>Who Am I</h2></nav>
 
        <section>
 
-
       <article>
-           <p></p>
+           <p>My main hobby is gaming. I play a game called Fortnite competitively and I've made thousands of dollars from it alone.
+           I started playing the game in late 2017, which is when it first came out. I have a few hundred followers on a live streaming platform called twitch,
+         and I have about 150 followers on twitter. I'm ranked in the top 50 from the west coast out of thousands of players as well.
+       A few big moments from while i was streaming was when a streamer with around 20,000 viewers started watching me</p>
          </article>
 
          <article>
@@ -35,7 +41,7 @@
        </section>
 
        <section>
-         <h3>Interests</h3>
+         <h3></h3>
 
          <article>
            <p>This is article 1 in section 2.</p>
@@ -50,15 +56,15 @@
   </body>
 
   <footer>
-     <blockquote cite="CITATION LINK HERE!!!!!>
-       <!-- Date Accessed: 20200917-->
-     </blockquote>
-     <p>
-       <strong>"QUOTE HER!!!E"</strong>
-       <em><a href="LINK HERE!!!!" target="_blank">
-       - AUTHOR OF QUOTE!!!!</a></em>
-     </p>
-     <p></p>
+    <blockquote cite="https://Twitch.tv/cozzlol">
+      <!-- Date Accessed: 20200917-->
+    </blockquote>
+    <p>
+      text
+      <em><a href="LINK HERE" target="_blank">
+      - AUTHOR HERE</a></em>
+    </p>
+    <p></p>
    </footer>
 
 </html>
