--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -10,11 +10,21 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- Content gives value for name or http-equiv attribute, text entry for typeof string or array string -->
 
+   <html>
+   <style>
+      div {
+     border: 5px outset red;
+     background-color: cyan ;
+     text-align: center;
+   }
+   </style>
   </head>
 
   <body>
 
-    <header><h1>Who Am I Project</h1></header>
+    <div><header><div><h1>Who Am I Project</h1></div></header></div>
+
+
 
        <nav><h2>Navigation Menu</h2></nav>
        <aside><p>
@@ -30,6 +40,8 @@
         </p>
         </aside>
 
+        
+
 
 
        <section>
@@ -42,7 +54,7 @@
               I have made websites on website building sites before, but i didnt do any coding, so this brings a challenge to me, and it is a skill i can use later in life.
               My family is originally from the country Lebanon, my dad moved to Toronto in the 1980's, and my mom followed him a few years after.
             They moved to Lethbridge and lived there for almost 10 years, I was born a year before they left Lethbridge to come to Edmonton. My family and I travel
-            to Lebanon every year with the exception of last summer, due to COVID-19. None of my extended family moved with us to Canada, so it has been hard on my family the past year.
+            to Lebanon every year with the exception of last summer, due to COVID-19. None of our extended family moved with us to Canada, so it has been hard on my family the past year.
 
           </p>
 
