--- a/Who Am I Inline CSS/childPages/Academics.html
+++ b/Who Am I Inline CSS/childPages/Academics.html
@@ -2,36 +2,47 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Who Am I</title>
+    <title>Academics</title>
 
     <meta name="author" content="Hadi Osman">
    <meta name="description" content="Describing who I am">
    <meta name="keywords" content="description, biography, Hadi Osman">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+   <html>
+   <style>
+      div {
+     border: 5px outset BlueViolet;
+     background-color: lightgreen ;
+     text-align: center;
+   }
+   </style>
   </head>
 
   <body>
 
-    <header><h1>Who Am I project </h1></header>
+    <div><header><div><h1>Academics</h1></div></header></div>
 
-       <nav><h2>Hadi Osman</h2></nav>
+       <nav><h2>Who Am I</h2></nav>
 
-       <aside><p></p></aside>
+
 
 
        <section>
-         <h3>Academics</h3>
+
 
       <article>
            <p>I think of myself as a sucessful student. I have finished almost every one of my classes after grade 7 with an 80% or above.
-             I didnt do nearly as much out of school work as well, so i believe if i put in the effort needed I can excel in any class.
-           Usually most classes come pretty easy to me </p>
+             I didnt do nearly as much out of school work as well, so I believe if I put in the effort needed I can do great in any class.
+            Usually most classes come pretty easy to me, but i especially excel in science. Science is one of those subjects to me where
+            after a little bit of practice, everything comes to me. Since I have been a kid I've read tons of books as well, which in turn
+            that helped me in english classes,I've had a much higher reading level than my grade level, which helped me do better in class.
+            This year, I haven't gotten below an 85% in the class yet.
+      </p>
          </article>
 
          <article>
-           <p>This is article 2 in section 1.</p>
+           <p></p>
          </article>
 
        </section>
@@ -60,7 +71,7 @@
        <em><a href="LINK HERE!!!!" target="_blank">
        - AUTHOR OF QUOTE!!!!</a></em>
      </p>
-     <p>&</p>
+     <p></p>
    </footer>
 
 </html>
