--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -40,7 +40,7 @@
         </p>
         </aside>
 
-        
+
 
 
 
@@ -54,7 +54,7 @@
               I have made websites on website building sites before, but i didnt do any coding, so this brings a challenge to me, and it is a skill i can use later in life.
               My family is originally from the country Lebanon, my dad moved to Toronto in the 1980's, and my mom followed him a few years after.
             They moved to Lethbridge and lived there for almost 10 years, I was born a year before they left Lethbridge to come to Edmonton. My family and I travel
-            to Lebanon every year with the exception of last summer, due to COVID-19. None of our extended family moved with us to Canada, so it has been hard on my family the past year.
+            to Lebanon every year with the exception of last summer, due to COVID-19. 
 
           </p>
 
