--- a/Who Am I Inline CSS/childPages/Academics.html
+++ b/Who Am I Inline CSS/childPages/Academics.html
@@ -32,8 +32,8 @@
 
 
       <article>
-           <p>I think of myself as a sucessful student. I have finished almost every one of my classes after grade 7 with an 80% or above.
-             I didnt do nearly as much out of school work as well, so I believe if I put in the effort needed I can do great in any class.
+           <p style="font-family:verdana;">I think of myself as a sucessful student. I have finished almost every one of my classes after grade 7 with an 80% or above.
+             I didnt do nearly as much out of school work as I should have either, so I believe if I put in the effort needed I can do great in any class.
             Usually most classes come pretty easy to me, but i especially excel in science. Science is one of those subjects to me where
             after a little bit of practice, everything comes to me. Since I have been a kid I've read tons of books as well, which in turn
             that helped me in english classes,I've had a much higher reading level than my grade level, which helped me do better in class.
