--- a/Who Am I Inline CSS/childPages/Career.html
+++ b/Who Am I Inline CSS/childPages/Career.html
@@ -5,8 +5,8 @@
     <title>Career</title>
 
     <meta name="author" content="Hadi Osman">
-   <meta name="description" content="Describing who I am">
-   <meta name="keywords" content="description, biography, Hadi Osman">
+   <meta name="description" content="Who Am I Website">
+   <meta name="keywords" content="biography, webpage, website,">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <html>
@@ -32,7 +32,7 @@
 
 
       <article>
-           <p> I only just started thinking about what I would like to do after i finish high school. Right now,
+             <p style="font-family:verdana;font-size:14px;"> I only just started thinking about what I would like to do after i finish high school. Right now,
             I believe I've narrowed it down to dentistry, civil engineering, or something to do with computers,
             like cyber security, or creating websites and programs. </p>
          </article>
@@ -58,16 +58,15 @@
 
   </body>
 
-  <footer>
-     <blockquote cite="CITATION LINK HERE!!!!!>
-       <!-- Date Accessed: 20200917-->
-     </blockquote>
-     <p>
-       <strong>"QUOTE HER!!!E"</strong>
-       <em><a href="LINK HERE!!!!" target="_blank">
-       - AUTHOR OF QUOTE!!!!</a></em>
-     </p>
-     <p></p>
-   </footer>
+
+    <footer>
+        <!-- Date Accessed: 20200924-->
+
+      <p style="font-family:verdana;font-size:11px;">
+        Created by Hadi Osman in github
+
+      </p>
+
+     </footer>
 
 </html>
