--- a/Who Am I Inline CSS/childPages/Interests.html
+++ b/Who Am I Inline CSS/childPages/Interests.html
@@ -31,39 +31,28 @@
       <p style="font-family:verdana;">My main hobby is gaming. I play a game called Fortnite competitively and I've made thousands of dollars from it alone.
       I started playing the game in late 2017, which is when it first came out. I have a few hundred followers on a live streaming platform called twitch,
     and I have about 150 followers on twitter. I'm ranked in the top 50 from the west coast out of thousands of players as well.
-  A few big moments from while i was streaming was when a streamer with around 20,000 viewers started watching me. I also bike and wrestle with my brothers
-    quite a bit, a few weeks ago we went to banff and rode our bikes down the trails. Here is a picture my brother took of me while we were there.</p>
+  One of my biggest moments was when a streamer with around 20,000 viewers started watching me play live. I also bike and wrestle with my brothers
+    quite a bit. A few weeks ago we went to Banff and rode our bikes down the trails. Here is a picture my brother took of me while we were there.</p>
 <br>
 <img src="file://fs-052/studuser$/Gr10/h.osman8/My%20Documents/GitHub/osmxnn.github.io/Who%20Am%20I%20Inline%20CSS/Images/pic2.jpeg" alt="Picture in Banff" width="500" height="500">
 
          </article>
+  <p style="font-family:verdana;">
+    Text Here
 
+  </p>
 
-
-       </section>
-
-
-
-         <article>
-           <p style="font-family:verdana;">Text Here</p>
-         </article>
-
-
-
-   </section>
 
   </body>
-
+<br><br><br><br><br>
   <footer>
-    <blockquote cite="https://Twitch.tv/cozzlol">
-      <!-- Date Accessed: 20200917-->
-    </blockquote>
-    <pstyle="font-family:verdana;">
-      My twitch account is also linked
-      <em><a href="https://Twitch.tv/cozzlol" target="_blank">
-      here</a></em>
+      <!-- Date Accessed: 20200924-->
+
+    <p style="font-family:verdana;">
+      Created by Hadi Osman
+
     </p>
-    <p></p>
+
    </footer>
 
 </html>
