--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -5,10 +5,10 @@
     <title>Who Am I Project</title>
 
     <meta name="author" content="Hadi Osman">
-   <meta name="description" content="Learning HTML by building a website"> <!-- Webpage Description -->
-   <meta name="keywords" content="HTML, tag, webpage, website, building"> <!-- Key Words for conducting searches in Search Engines -->
+   <meta name="description" content="Who Am I Website">
+   <meta name="keywords" content="biography, webpage, website,">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Content gives value for name or http-equiv attribute, text entry for typeof string or array string -->
+
 
    <html>
    <style>
@@ -57,28 +57,30 @@
             to Lebanon every year with the exception of last summer, due to COVID-19.
 
           </p>
+          <a href="childPages\Easter Egg.html" target="_blank">
+            <img src="https://annamap.com/lebanon/lebanon-map.jpg" alt="Lebanon Map" style="width:300px;height:350px;">
+                                            <!-- Date Accessed: 20200924-->
 
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0-ogO8tpbtg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                  <!-- Date Accessed: 20200924-->
          </article>
 
        </section>
-
-         <article>
-           <p>This is article 2 in section 2.</p>
-         </article>
-
-
 
   </body>
 
   <footer>
      <blockquote cite="https://i.pinimg.com/originals/8d/c1/0d/8dc10da20af97c84ce448ca93798e18b.jpg">
-       <!-- Date Accessed: 20200917-->
+       <!-- Date Accessed: 20200924-->
      </blockquote>
      <p>
-       <strong>"The greatest glory in living lies not in never falling, but in rising every time we fall.</strong>
-       <em><a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target="_blank">
+       <a><strong>"The greatest glory in living lies not in never falling, but in rising every time we fall.</strong></a>
+       <em><a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target="_blank">  <!-- Date Accessed: 20200924-->
        - Nelson Mandela</a></em>
      </p>
    </footer>
+   <p style="font-family:verdana;font-size:11px;">
+     Created by Hadi Osman in github
 
 </html>
