--- a/Who Am I Inline CSS/childPages/Career.html
+++ b/Who Am I Inline CSS/childPages/Career.html
@@ -23,7 +23,15 @@
 
     <div><header><div><h1>Career</h1></div></header></div>
 
-       <nav><h2>Who Am I</h2></nav>
+    <nav><h2>Navigation Menu</h2></nav>
+    <aside><p style="font-family:verdana;">
+      <ul style="list-style-type:square">
+         <li>to visit the Academics page, click<a href="childPages\Academics.html" target="_blank">
+           here</a></li>
+         <li>to visit the Interests page, click<a href="childPages\Interests.html" target="_blank">
+           here</a></li>
+         <li>to visit the Main page, click<a href="childPages\Index.html" target="_blank">
+           here</a></li>
 
 
 
@@ -32,36 +40,41 @@
 
 
       <article>
-             <p style="font-family:verdana;font-size:14px;"> I only just started thinking about what I would like to do after i finish high school. Right now,
-            I believe I've narrowed it down to dentistry, civil engineering, or something to do with computers,
-            like cyber security, or creating websites and programs. </p>
-         </article>
+             <p style="font-family:verdana;font-size:14px;">
+I only just started thinking about what I would like to do after I finish high school. Right now,
+I believe I've narrowed it down to dentistry, engineering (electrical & computer engineering), or something to do with computers,
+like cyber security, or creating websites and programs. I've loved building structures since my childhood, I used to be obsessed with legos and building
+my own contraptions. Back in grade four or five, my teacher started to teach us about circuits, and we eventually built our own cars.
+That project was one of my most memorable and fun experiences in school, and it is also part of the reason I would like to go into engineering.
+I have a large interest in working with computers, so that's honestly what I see myself going into the most. I have also been interested in the health field recently. I was thinking
+about going into medical, but i realized it would take almost ten years just to get the degree, so dentistry seems like the better option for me.
+I genuinely find it interesting, the pay is really high, and it would only take a few years to get my degree. The most realistic thing to happen to me
+after high school is to just work at my parent's store in West Edmonton Mall until I decide 100% on what I'd like to do. I've talked to a lot of people, my brother included,
+who have switched courses midway through their degree. Personally, it seems like a major waste of time to not be sure in what i want to do, just in case
+i ever want to switch courses. </p>
 
-         <article>
-           <p></p>
-         </article>
+<br>
+<h3><p style="font-family:verdana;font-size:14px;">
+Here's a picture of my parent's bridal shop in West Edmonton Mall
+</p></h3>
+<img src="https://www.wem.ca/media/354947/divine-bridal-storefront-photo-2-1920.jpg?anchor=center&mode=crop&width=480&height=480" alt="Divine Bridal">
 
-       </section>
 
-       <section>
-         <h3>Section 2</h3>
 
-         <article>
-           <p>This is article 1 in section 2.</p>
-         </article>
 
-         <article>
-           <p>This is article 2 in section 2.</p>
-         </article>
 
-   </section>
+
+
+
+
+
 
   </body>
 
 
     <footer>
         <!-- Date Accessed: 20200924-->
-
+<br><br><br><br>
       <p style="font-family:verdana;font-size:11px;">
         Created by Hadi Osman in github
 
