--- a/Who Am I Inline CSS/childPages/Academics.html
+++ b/Who Am I Inline CSS/childPages/Academics.html
@@ -5,8 +5,8 @@
     <title>Academics</title>
 
     <meta name="author" content="Hadi Osman">
-   <meta name="description" content="Describing who I am">
-   <meta name="keywords" content="description, biography, Hadi Osman">
+   <meta name="description" content="Who Am I Website">
+   <meta name="keywords" content="biography, webpage, website,">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <html>
@@ -23,7 +23,15 @@
 
     <div><header><div><h1>Academics</h1></div></header></div>
 
-       <nav><h2>Who Am I</h2></nav>
+    <nav><h2>Navigation Menu</h2></nav>
+    <aside><p style="font-family:verdana;">
+      <ul style="list-style-type:square">
+         <li>to visit the Careers page, click<a href="childPages\Career.html" target="_blank">
+           here</a></li>
+         <li>to visit the Interests page, click<a href="childPages\Interests.html" target="_blank">
+           here</a></li>
+         <li>to visit the Main page, click<a href="childPages\Index.html" target="_blank">
+           here</a></li>
 
 
 
@@ -32,46 +40,37 @@
 
 
       <article>
-           <p style="font-family:verdana;">I think of myself as a sucessful student. I have finished almost every one of my classes after grade 7 with an 80% or above.
-             I didnt do nearly as much out of school work as I should have either, so I believe if I put in the effort needed I can do great in any class.
-            Usually most classes come pretty easy to me, but i especially excel in science. Science is one of those subjects to me where
-            after a little bit of practice, everything comes to me. Since I have been a kid I've read tons of books as well, which in turn
-            that helped me in english classes,I've had a much higher reading level than my grade level, which helped me do better in class.
-            This year, I haven't gotten below an 85% in the class yet.
+           <p   <p style="font-family:verdana;font-size:14px;">
+
+            I think of myself as a successful student. I have finished
+            almost all of my classes after grade 7 with an 80% or above. I didn't do nearly as much out of school work as I
+            should have either, so I believe if I put in the effort needed I can do great in any class. Usually most classes
+            come pretty easy to me, but I especially excel in science. Science is one of those subjects to me where after a
+            little bit of practice, everything comes to me with ease. Since I was a kid I've read tons of books as well, which
+            in turn helped me in english classes.I've had a much higher reading level than my grade level, which helped me do
+            better in class. Currently, I have about a 90% average in Science 10-1, which is pretty awesome to me. Most topics
+            in school come fairly easy to me, this class for example. 2 weeks ago, I couldn't understand what a single line of
+            code meant, nonetheless I write them myself. In just a few weeks I have a deep understanding of how coding works.
+            These last few weeks in computer sciences has taught me a lot, and i hope to learn more in the coming months.
+
       </p>
          </article>
 
-         <article>
-           <p></p>
-         </article>
 
        </section>
 
-       <section>
-         <h3>Section 2</h3>
 
-         <article>
-           <p>This is article 1 in section 2.</p>
-         </article>
-
-         <article>
-           <p>This is article 2 in section 2.</p>
-         </article>
-
-   </section>
 
   </body>
 
   <footer>
-     <blockquote cite="CITATION LINK HERE!!!!!>
-       <!-- Date Accessed: 20200917-->
-     </blockquote>
-     <p>
-       <strong>"QUOTE HER!!!E"</strong>
-       <em><a href="LINK HERE!!!!" target="_blank">
-       - AUTHOR OF QUOTE!!!!</a></em>
-     </p>
-     <p></p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <p   <p style="font-family:verdana;font-size:11px;">
+      Created by Hadi Osman in github
+
+    </p>
+
    </footer>
 
 </html>
