--- a/Who Am I Inline CSS/childPages/Interests.html
+++ b/Who Am I Inline CSS/childPages/Interests.html
@@ -5,8 +5,8 @@
     <title>Interests</title>
 
     <meta name="author" content="Hadi Osman">
-   <meta name="description" content="Describing who I am">
-   <meta name="keywords" content="description, biography, Hadi Osman">
+   <meta name="description" content="Who Am I Website">
+   <meta name="keywords" content="biography, webpage, website,">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <html>
@@ -23,21 +23,30 @@
 
   <div><header><div><h1>Interests</h1></div></header></div>
 
-       <nav><h2>Who Am I</h2></nav>
+  <nav><h2>Navigation Menu</h2></nav>
+  <aside><p style="font-family:verdana;">
+    <ul style="list-style-type:square">
+       <li>to visit the Careers page, click<a href="childPages\Career.html" target="_blank">
+         here</a></li>
+       <li>to visit the Academics page, click<a href="childPages\Academics.html" target="_blank">
+         here</a></li>
+       <li>to visit the Main page, click<a href="childPages\Index.html" target="_blank">
+         here</a></li>
 
        <section>
 
       <article>
-      <p style="font-family:verdana;">My main hobby is gaming. I play a game called Fortnite competitively and I've made thousands of dollars from it alone.
+      <p style="font-family:verdana;font-size:14px;">My main hobby is gaming. I play a game called Fortnite competitively and I've made thousands of dollars from it alone.
       I started playing the game in late 2017, which is when it first came out. I have a few hundred followers on a live streaming platform called twitch,
     and I have about 150 followers on twitter. I'm ranked in the top 50 from the west coast out of thousands of players as well.
-  One of my biggest moments was when a streamer with around 20,000 viewers started watching me play live. I also bike and wrestle with my brothers
-    quite a bit. A few weeks ago we went to Banff and rode our bikes down the trails. Here is a picture my brother took of me while we were there.</p>
+  One of my biggest moments was when a streamer with around 20,000 viewers started watching me play live. I listen to music probably about 7 hours a day
+  or more, I constantly have music going while im playing games, or i have an earbud in during class while im learning. Music to me, is something i cant live
+  without. I also bike and wrestle with my brothers quite a bit. A few weeks ago we went to Banff and rode our bikes down the trails. Here is a picture my brother took of me while we were there.</p>
 <br>
 <img src="file://fs-052/studuser$/Gr10/h.osman8/My%20Documents/GitHub/osmxnn.github.io/Who%20Am%20I%20Inline%20CSS/Images/pic2.jpeg" alt="Picture in Banff" width="500" height="500">
 
          </article>
-  <p style="font-family:verdana;">
+  <p style="font-family:verdana;font-size:14px;">
     Text Here
 
   </p>
@@ -48,8 +57,8 @@
   <footer>
       <!-- Date Accessed: 20200924-->
 
-    <p style="font-family:verdana;">
-      Created by Hadi Osman
+    <p style="font-family:verdana;font-size:11px;">
+      Created by Hadi Osman in github
 
     </p>
 
