--- a/Who Am I Inline CSS/childPages/Interests.html
+++ b/Who Am I Inline CSS/childPages/Interests.html
@@ -40,7 +40,7 @@
       I started playing the game in late 2017, which is when it first came out. I have a few hundred followers on a live streaming platform called twitch,
     and I have about 150 followers on twitter. I'm ranked in the top 50 from the west coast out of thousands of players as well.
   One of my biggest moments was when a streamer with around 20,000 viewers started watching me play live. I listen to music probably about 7 hours a day
-  or more, I constantly have music going while im playing games, or i have an earbud in during class while im learning. Music to me, is something i cant live
+  or more, I constantly have music going while im playing games, or i have an earbud in during class while im learning. Music to me, is something i can't live
   without. I also bike and wrestle with my brothers quite a bit. A few weeks ago we went to Banff and rode our bikes down the trails. Here is a picture my brother took of me while we were there.</p>
 <br>
 <img src="file://fs-052/studuser$/Gr10/h.osman8/My%20Documents/GitHub/osmxnn.github.io/Who%20Am%20I%20Inline%20CSS/Images/pic2.jpeg" alt="Picture in Banff" width="500" height="500">
