--- a/Who Am I Inline CSS/childPages/Template.html
+++ b/Who Am I Inline CSS/childPages/Template.html
@@ -5,8 +5,8 @@
     <title>Who Am I</title>
 
     <meta name="author" content="Hadi Osman">
-   <meta name="description" content="Describing who I am">
-   <meta name="keywords" content="description, biography, Hadi Osman">
+   <meta name="description" content="Who Am I Website">
+   <meta name="keywords" content="biography, webpage, website,">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -49,15 +49,13 @@
   </body>
 
   <footer>
-     <blockquote cite="CITATION LINK HERE!!!!!>
-       <!-- Date Accessed: 20200917-->
-     </blockquote>
-     <p>
-       <strong>"QUOTE HER!!!E"</strong>
-       <em><a href="LINK HERE!!!!" target="_blank">
-       - AUTHOR OF QUOTE!!!!</a></em>
-     </p>
-     <p></p>
+      <!-- Date Accessed: 20200924-->
+
+    <p style="font-family:verdana;font-size:11px;">
+      Created by Hadi Osman in github
+
+    </p>
+
    </footer>
 
 </html>
