--- a/Who Am I Inline CSS/Index.html
+++ b/Who Am I Inline CSS/Index.html
@@ -81,6 +81,6 @@
      </p>
    </footer>
    <p style="font-family:verdana;font-size:11px;">
-     Created by Hadi Osman in github
+     Created by Hadi Osman in GitHub
 
 </html>
