--- a/Who Am I Inline CSS/childPages/Academics.html
+++ b/Who Am I Inline CSS/childPages/Academics.html
@@ -26,11 +26,11 @@
     <nav><h2>Navigation Menu</h2></nav>
     <aside><p style="font-family:verdana;">
       <ul style="list-style-type:square">
-         <li>to visit the Careers page, click<a href="childPages\Career.html" target="_blank">
+         <li>to visit the Careers page, click<a href="Career.html" target="_blank">
            here</a></li>
-         <li>to visit the Interests page, click<a href="childPages\Interests.html" target="_blank">
+         <li>to visit the Interests page, click<a href="Interests.html" target="_blank">
            here</a></li>
-         <li>to visit the Main page, click<a href="childPages\Index.html" target="_blank">
+         <li>to visit the Main page, click<a href="Index.html" target="_blank">
            here</a></li>
 
 
@@ -43,8 +43,8 @@
            <p   <p style="font-family:verdana;font-size:14px;">
 
             I think of myself as a successful student. I have finished
-            almost all of my classes after grade 7 with an 80% or above. I didn't do nearly as much out of school work as I
-            should have either, so I believe if I put in the effort needed I can do great in any class. Usually most classes
+            almost all of my classes after grade 7 with an 80% or above. The only out of school work I did was assigned homework,
+            I did almost no studying, so I believe if I put in the effort needed I can do great in any class. Usually most classes
             come pretty easy to me, but I especially excel in science. Science is one of those subjects to me where after a
             little bit of practice, everything comes to me with ease. Since I was a kid I've read tons of books as well, which
             in turn helped me in english classes.I've had a much higher reading level than my grade level, which helped me do
@@ -67,7 +67,7 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <p   <p style="font-family:verdana;font-size:11px;">
-      Created by Hadi Osman in github
+      Created by Hadi Osman in GitHub
 
     </p>
 
