--- a/Who Am I Inline CSS/childPages/Career.html
+++ b/Who Am I Inline CSS/childPages/Career.html
@@ -26,11 +26,11 @@
     <nav><h2>Navigation Menu</h2></nav>
     <aside><p style="font-family:verdana;">
       <ul style="list-style-type:square">
-         <li>to visit the Academics page, click<a href="childPages\Academics.html" target="_blank">
+         <li>to visit the Academics page, click<a href="Academics.html" target="_blank">
            here</a></li>
-         <li>to visit the Interests page, click<a href="childPages\Interests.html" target="_blank">
+         <li>to visit the Interests page, click<a href="Interests.html" target="_blank">
            here</a></li>
-         <li>to visit the Main page, click<a href="childPages\Index.html" target="_blank">
+         <li>to visit the Main page, click<a href="\Who Am I Inline CSS\Index.html" target="_blank">
            here</a></li>
 
 
@@ -76,7 +76,7 @@ Here's a picture of my parent's bridal shop in West Edmonton Mall
         <!-- Date Accessed: 20200924-->
 <br><br><br><br>
       <p style="font-family:verdana;font-size:11px;">
-        Created by Hadi Osman in github
+        Created by Hadi Osman in GitHub
 
       </p>
 
