--- a/Who Am I Inline CSS/childPages/Interests.html
+++ b/Who Am I Inline CSS/childPages/Interests.html
@@ -26,11 +26,11 @@
   <nav><h2>Navigation Menu</h2></nav>
   <aside><p style="font-family:verdana;">
     <ul style="list-style-type:square">
-       <li>to visit the Careers page, click<a href="childPages\Career.html" target="_blank">
+       <li>to visit the Careers page, click<a href="Career.html" target="_blank">
          here</a></li>
-       <li>to visit the Academics page, click<a href="childPages\Academics.html" target="_blank">
+       <li>to visit the Academics page, click<a href="Academics.html" target="_blank">
          here</a></li>
-       <li>to visit the Main page, click<a href="childPages\Index.html" target="_blank">
+       <li>to visit the Main page, click<a href="Index.html" target="_blank">
          here</a></li>
 
        <section>
@@ -43,14 +43,9 @@
   or more, I constantly have music going while im playing games, or i have an earbud in during class while im learning. Music to me, is something i can't live
   without. I also bike and wrestle with my brothers quite a bit. A few weeks ago we went to Banff and rode our bikes down the trails. Here is a picture my brother took of me while we were there.</p>
 <br>
-<img src="file://fs-052/studuser$/Gr10/h.osman8/My%20Documents/GitHub/osmxnn.github.io/Who%20Am%20I%20Inline%20CSS/Images/pic2.jpeg" alt="Picture in Banff" width="500" height="500">
+<img src="file:///C:/Users/divin/Documents/GitHub/Who-Am-I/Who%20Am%20I%20Inline%20CSS/Images/pic2.jpeg" alt="Picture in Banff" width="500" height="500">
 
          </article>
-  <p style="font-family:verdana;font-size:14px;">
-    Text Here
-
-  </p>
-
 
   </body>
 <br><br><br><br><br>
@@ -58,7 +53,7 @@
       <!-- Date Accessed: 20200924-->
 
     <p style="font-family:verdana;font-size:11px;">
-      Created by Hadi Osman in github
+      Created by Hadi Osman in GitHub
 
     </p>
 
